--- a/Boda_BlazorWASM_PowerAutomate.csproj
+++ b/Boda_BlazorWASM_PowerAutomate.csproj
@@ -8,6 +8,7 @@
 
 	<ItemGroup>
 		<PackageReference Include="Blazor.AnimateOnScroll" Version="1.1.0" />
+		<PackageReference Include="BlazorAnimation" Version="2.2.0" />
 		<PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly" Version="6.0.7" />
 		<PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly.DevServer" Version="6.0.7" PrivateAssets="all" />
 		<PackageReference Include="MudBlazor" Version="6.12.0" />
