--- a/Boda_BlazorWASM_PowerAutomate.csproj
+++ b/Boda_BlazorWASM_PowerAutomate.csproj
@@ -17,6 +17,12 @@
 	<ItemGroup>
 	  <Folder Include="Services\" />
 	</ItemGroup>
+
+	<ItemGroup>
+	  <Content Update="wwwroot\scripts\scrollToBottom.js">
+	    <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+	  </Content>
+	</ItemGroup>
 	
 	
 </Project>
